schemars/tests/ui/transform_str.rs
use schemars::JsonSchema;

#[derive(JsonSchema)]
#[schemars(transform = "x")]
pub struct Struct;

fn main() {}
